2005-06-24  Albert Chu  <chu11@llnl.gov>

	* Continued worked on metric_names metric.

	* tagged post-metric-names-metric-1

	* Various code cleanup and corner case fixing.
	
2005-06-23  Albert Chu  <chu11@llnl.gov>

	* Fixed slurm_state metric bugs.

	* cerebro.spec.in: Updated for slurm_state metric.

	* Various minor bug fixes.

	* tagged pre-metric-names-metric-1

	* Begin work to support metric_names metric

	* Begin work on metriclist API.
	
2005-06-22  Albert Chu  <chu11@llnl.gov>

	* Removed raw data metric.

	* Various cleanup.

	* tagged pre-metric-thread-1

	* Added metric thread support.

	* Added slurm_state metric module.

2005-06-21  Albert Chu  <chu11@llnl.gov>

	* Begin work on speaker scheduler.

	* Various minor fixes.

	* tagged pre-speaker-data-integration-1

	* integrate speakder-data
	
	* tagged post-speaker-data-integration-1

	* Split off wrappers off into a library.
	
2005-06-20  Albert Chu  <chu11@llnl.gov>

	* Split off cerebro utility functions and created libutil
	convenience library.

	* Documentation update.

	* Various code cleanup.
	
	* tagged cerebro-1-0-0-pre3

2005-06-18  Albert Chu  <chu11@llnl.gov>

	* Various minor fixes.

	* Split off libcerebro modules library into libmodules.
	
2005-06-17  Albert Chu  <chu11@llnl.gov>

	* Minor cleanup.

	* Significant libcerebro code cleanup, module library code split
	up.

	* tagged pre-library-reorg-1

 	* Library reorganization.

	* New libcerebro_error library.
	
2005-06-16  Albert Chu  <chu11@llnl.gov>

	* Fixed up locking issues.

	* Marshall library cleanup.

	* Error library cleanup.

	* Various bug fixing

	* tagged pre-static-compilation-remove-1

	* Removed everything related to static compilation.

	* tagged post-static-compilation-remove-1

	* Various calculation tweaks and bug fixes.

	* Monitor module tweaking.

	* cerebrod speaker logic fixing.

	* Metric module tweaking.
	
2005-06-15  Albert Chu  <chu11@llnl.gov>

	* Fixed static compilation bugs.
