@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.8 2005-06-21 22:29:07 achu Exp $
+## $Id: Makefile.am,v 1.9 2005-06-25 00:14:28 achu Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
@@ -12,6 +12,7 @@
 SUBDIRS = cerebro_error \
 	  cerebro \
 	  common \
+	  debug \
 	  modules \
 	  include \
 	  util \
